Fix theme choose bug on Safari (#645)
* Fixing theme choose bug

* polishing

* polishing

* bump

--- a/core-ui/src/components/Preferences/ThemePreview/ThemePreview.scss
+++ b/core-ui/src/components/Preferences/ThemePreview/ThemePreview.scss
@@ -3,12 +3,18 @@
 
   * {
     position: absolute;
-    left:0;
+    left: 0;
   }
 
-  & > :last-child {
-    clip-path: polygon(0 0, 100% 0, 0 100%); 
+  & :last-child {
+    svg {
+      clip-path: polygon(0 0, 100% 0, 0 100%);
+    }
   }
+}
+
+.theme-wrapper {
+  position: relative;
 }
 
 .theme-preview {
